# soloA

a1/: index.html  package-lock.json  package.json
a1/public/: floating.html
a1/src/: App.tsx  index.css
a1/src-tauri/: Cargo.toml  tauri.conf.json
a1/src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs
a10/: Cargo.toml
a10/src/: lib.rs  main.rs  particle.rs  protocol.rs  simulation.rs
a10/src/client/: main.rs  network.rs
a10/src/server/: connection.rs  history.rs  main.rs  mod.rs  simulation.rs
a100/: Cargo.toml
a100/examples/: composite-scenario.yaml  docker-compose-scenario.yaml  network-partition-scenario.yaml  ssh-baremetal-scenario.yaml
a100/src/: chaos_engine.rs  cli.rs  errors.rs  lib.rs  main.rs  observability.rs  orchestrator.rs  recommendation.rs  scenario.rs  security.rs  topology.rs  validation.rs
a11/: README.md  api-docs.md
a11/client/: package.json
a11/database/: init.js
a11/server/: .env.example  package.json
a12/: go.mod
a12/cmd/: main.go
a12/config/: config.yaml
a12/migrations/: 001_init.sql
a12/proto/: node.proto
a13/: .gitignore  index.html  package-lock.json  package.json
a13/src/: main.ts
a14/: start_backend.bat  start_frontend.bat
a14/backend/: requirements.txt
a14/frontend/: index.html  package.json
a15/: README.md  pom.xml
a16/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
a16/electron/: ipc.ts  main.ts  preload.ts  ssh-tunnel.ts  store.ts  types.ts
a16/src/: App.tsx  index.css
a17/: start_backend.bat  start_beat.bat  start_celery.bat  start_frontend.bat
a17/backend/: manage.py  requirements.txt  test_fixes.py
a17/frontend/: index.html  package.json
a18/: .gitignore  package.json
a18/backend/: .env.example  init-db.sql  package.json
a18/frontend/: index.html  package.json  vite.config.ts
a19/: docker-compose.yml
a19/backend/: .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
a19/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
a2/: config.yaml  go.mod
a2/cmd/: main.go
a2/scripts/: schema.sql
a20/: go.mod
a20/cmd/: main.go
a20/config/: config.yaml
a21/: README.md  docker-compose.yml
a21/client/: index.html  package.json  vite.config.ts
a21/server/: .env.example  package.json
a22/: go.mod
a22/config/: config.yaml
a23/: .gitignore  README.md  docker-compose.yml  package.json
a23/backend/: .env.example  package.json
a23/frontend/: index.html  package.json
a24/: docker-compose.yml
a24/backend/: Dockerfile  requirements.txt
a24/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
a25/: go.mod
a25/config/: config.yaml
a26/client/: index.html  package.json  vite.config.ts
a26/server/: .env.example  package.json
a27/: README.md  docker-compose.yml
a27/auth-service/: Dockerfile  config.py  grpc_server.py  main.py  models.py  requirements.txt  routes.py  schemas.py  security.py  services.py
a27/crdt-service/: Dockerfile  config.py  grpc_server.py  main.py  requirements.txt  routes.py
a27/gateway/: Dockerfile  (+3 more)
a28/: .gitignore  README.md  docker-compose.yml
a29/: README.md  docker-compose.yml
a3/: README.md
a30/: README.md  start-client.bat  start-client.sh  start-server.bat  start-server.sh
a31/: .babelrc  package-lock.json  package.json  webpack.config.js
a32/: docker-compose.yml
a33/: .gitignore  README.md  docker-compose.yml
a35/: go.mod  main.go
a4/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
a41/: .gitignore  package.json
a42/: config.yaml  generate_protobuf.bat  go.mod
a43/: README.md
a44/: README.md  docker-compose.yml
a45/: .env.example  .gitignore  package-lock.json  package.json
a46/: README.md  index.html  package-lock.json  package.json
a46/src-tauri/: Cargo.toml  tauri.conf.json
a46/src-tauri/src/: capture.rs  cert_parser.rs  database.rs  errors.rs  intrusion_detection.rs  lib.rs  main.rs  parser.rs  tls_parser.rs  types.rs
a48/: .env.example  .gitignore  README.md  docker-compose.yml
a49/: start.bat  start.sh
a5/: test_fixes.py  test_new_features.py
a50/: go.mod
a51/: package-lock.json  package.json
a52/: .env.example  package.json
a54/: demo_batch_config.csv  demo_batch_config.json  demo_sensitivity_and_batch.py  main.py  requirements.txt  test_2d_and_sensitivity.py  test_batch.json  test_batch_runner.py  test_bug_fixes.py  test_simulation.py
a56/: CMakeLists.txt  README.md  vcpkg.json
a56/src/: main.cpp
a56/src/core/: AutoKerningAnalyzer.cpp  AutoKerningAnalyzer.h  FontComparisonManager.cpp  FontComparisonManager.h  FontManager.cpp  FontManager.h  FontParser.cpp  FontParser.h  HistoryManager.cpp  HistoryManager.h  KerningAdjuster.cpp  KerningAdjuster.h  KerningPair.cpp  KerningPair.h
a56/src/io/: ConfigManager.cpp  ConfigManager.h  Exporter.cpp  Exporter.h
a56/src/render/: FontRenderer.cpp  FontRenderer.h  PreviewRenderer.cpp  PreviewRenderer.h
a56/src/ui/: AutoKerningPanel.cpp  AutoKerningPanel.h  FontComparisonPanel.cpp  FontComparisonPanel.h  FontListWidget.cpp  FontListWidget.h  KerningTableWidget.cpp  KerningTableWidget.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  SettingsDialog.cpp  SettingsDialog.h
a57/: .gitignore
a58/: README.md  app.py  code_processor.py  config.py  history_manager.py  llm_model.py  qa_engine.py  requirements.txt  retrieval.py  vector_db.py
a6/: index.html  package-lock.json  package.json  tailwind.config.js
a60/: pyproject.toml
a60/src/depchecker/: __init__.py  analyzer.py  cli.py  formatter.py  models.py
a60/src/depchecker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
a60/src/depchecker/detectors/: __init__.py  conflict_detector.py
a60/src/depchecker/parsers/: __init__.py  base.py  maven.py  npm.py  pip.py
a60/src/depchecker/recommenders/: recommender.py
a60/src/depchecker/visualizers/: visualizer.py
a60/tests/test-npm-project/: package-lock.json  package.json
a7/: pom.xml
(+1546 files in other folders)
