[package]
name = "chaos-platform"
version = "0.1.0"
edition = "2021"
authors = ["Chaos Engineering Team"]
description = "Distributed Systems Chaos Engineering Platform CLI"

[dependencies]
clap = { version = "4.5", features = ["derive", "json", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ssh2 = "0.11"
docker-api = "0.14"
kube = { version = "0.91", features = ["runtime", "client"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
etcd-client = "0.12"
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tempfile = "3.10"
walkdir = "2.5"
urlencoding = "2.1"
petgraph = "0.6"
ndarray = "0.15"
rand = "0.8"
postgres = "0.19"
mysql_async = "0.33"
lapin = "2.1"
kafka = "0.10"
sysinfo = "0.30"
regex = "1.10"
num-traits = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "chaosctl"
path = "src/main.rs"
