[package]
name = "network-analyzer"
version = "0.1.0"
description = "Network Traffic Protocol Analyzer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "network_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"

[dependencies.pcap]
version = "1.1"
default-features = false
features = ["capture-stream"]

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

[dependencies.once_cell]
version = "1.19"

[dependencies.parking_lot]
version = "0.12"

[dependencies.x509-parser]
version = "0.15"
features = ["verify", "serde"]

[dependencies.oid-registry]
version = "0.7"

[dependencies.der-parser]
version = "8.2"

[dependencies.asn1-rs]
version = "0.6"

[dependencies.base64]
version = "0.21"

[dependencies.lazy_static]
version = "1.4"

[dependencies.sha2]
version = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
